[package]
name = "debug_overlay"
description = "A basic low-overhead and ascii-only debug overlay that can be displayed using GPU APIs such as wgpu."
version = "0.6.0"
edition = "2021"
authors = ["Nicolas Silva"]
license = "MIT OR Apache-2.0"
keywords = ["graphics", "debugging"]

[features]
wgpu = ["dep:wgpu","dep:wgpu-types"]
wgpu-core = ["dep:wgpu-core","dep:wgpu-types"]

[dependencies]
bytemuck = "1.15.0"
wgpu = { version = "22.0", optional = true }
wgpu-types = { version = "22.0", optional = true }
wgpu-core = { version = "22.0", optional = true }
